--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
 <body>
 
+    <!--Header con un navbar-->
     <header>
 
         <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-indigo-800">
             <div class="container flex flex-wrap justify-between items-center mx-auto">
                 <a href="index.html" class="flex items-center">
-                    <img src="assets/images/logo_white_large.png" class="mr-3 h-6 sm:h-9" alt="Logo Meet Your Volunteer">
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Meet Your Volunteer</span>
+                    <img src="assets/images/logo_white_large.png" class="mr-3 h-6 sm:h-9"
+                        alt="Logo Meet Your Volunteer">
+                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Meet Your
+                        Volunteer</span>
                 </a>
                 <button data-collapse-toggle="mobile-menu" type="button"
                     class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -61,8 +64,48 @@
             </div>
         </nav>
 
-
     </header>
+
+    <!--Final del header-->
+
+    <!--Inicio del main-->
+
+    <main>
+
+        <div class="flex mb-4 pt-20">
+            <div class="w-2/5 p-2 text-center">
+                <img src="assets/images/logo_white_large.png" alt="Logo Meet Your Volunteer"
+                    id="logoGrandePaginaPrincipal">
+            </div>
+            <div class="w-3/5 p-2 text-center">
+                <h1 id="tituloPrincipal">Meet Your Volunteer</h1>
+                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut hic eligendi, sunt laboriosam iste, rem enim similique ex nobis animi vel voluptatum necessitatibus perspiciatis fugiat tempora, eius eum quaerat modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque, aliquid autem iste tempore id saepe dolorem quam quidem suscipit amet! Placeat exercitationem corrupti explicabo beatae quis quibusdam esse distinctio dolore.</p>
+                <p class="descripcion">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi sapiente quia consequuntur repellendus delectus amet aut reiciendis ratione saepe asperiores nemo nam quod ab, recusandae, obcaecati ipsa rerum facilis illum!</p>
+            </div>
+        </div>
+
+        <div id="divFuncionalidades">
+
+            <h2 id="tituloFuncionalidades">Funcionalidades</h2>
+            <p class="descripcionFuncionalidades">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quisquam ad unde natus, maiores earum velit aliquid laborum odio ipsum alias necessitatibus cum rerum aspernatur. Delectus enim fuga cum vitae?</p>
+            
+        </div>
+
+        <div id="divCaracteristicas">
+
+            <h2 id="tituloCaracteristicas">Características</h2>
+            <p class="descripcionCaracteristicas">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quisquam ad unde natus, maiores earum velit aliquid laborum odio ipsum alias necessitatibus cum rerum aspernatur. Delectus enim fuga cum vitae?</p>
+            
+        </div>
+
+    </main>
+
+    <!--Final del main-->
+
+    <!--Inicio del footer-->
+
+    <!--Fin del footer-->
+
     <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
 
 </body>
