Le hemos cambiado la fuente de la letra a toda la pagina web

--- a/equipo.html
+++ b/equipo.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -83,7 +86,8 @@
                 <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">Alex Pastor - Product Owner</div>
                     <p class="text-gray-700 text-base">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id repellendus adipisci corporis assumenda quam perspiciatis, est laboriosam mollitia quasi, ad veritatis. Voluptate corporis id facere doloribus quisquam aperiam ad beatae?
+                        Representa el cliente dentro del equipo de trabajo. Su principal responsabilidad es expresar claramente 
+                        la necesidad del cliente dentro del Product BackLog, administrarlo y priorizarlo.
                     </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
@@ -97,7 +101,8 @@
                 <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">Marc Linares - Scrum Master</div>
                     <p class="text-gray-700 text-base">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta neque maxime ullam fugiat harum quae iure quas, libero atque! Labore distinctio beatae tempora facere mollitia quisquam. Perferendis saepe nemo ab.
+                        Es el responsable de asegurar que la metodología se está aplicando y de
+                        que el equipo está trabajando ajustándose a las reglas que marca la misma.
                     </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
@@ -111,7 +116,7 @@
                 <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">Monika Deleva - Developer</div>
                     <p class="text-gray-700 text-base">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non autem eligendi dolorem aut deserunt velit adipisci quos quas ex aliquid accusamus magnam quasi amet, similique exercitationem facilis fuga tempore alias?
+                       Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
                     </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
@@ -125,7 +130,7 @@
                 <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">Bernat Alcudia - Developer</div>
                     <p class="text-gray-700 text-base">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ducimus nobis ab sapiente! Fugiat consequatur iste quam similique eos! Porro at commodi perspiciatis rerum, quae sed dignissimos rem facere tenetur!
+                        Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
                     </p>
                 </div>
                 <div class="px-6 pt-4 pb-2">
@@ -160,13 +165,13 @@
                 <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Help center</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Instagram</a>
+                        <a href="https://www.instagram.com/" class="hover:underline" target="_blank">Instagram</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Twitter</a>
+                        <a href="https://twitter.com/?lang=es" class="hover:underline" target="_blank">Twitter</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Facebook
+                        <a href="https://es-es.facebook.com/" class="hover:underline" target="_blank">Facebook
                         </a>
                     </li><a href="#" class="hover:underline">
                     </a>
