--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -79,33 +82,30 @@
             </div>
             <div class="w-3/5 p-2 text-center">
                 <h1 id="tituloPrincipal">Meet Your Volunteer</h1>
-                <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut hic eligendi, sunt
-                    laboriosam iste, rem enim similique ex nobis animi vel voluptatum necessitatibus perspiciatis fugiat
-                    tempora, eius eum quaerat modi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque,
-                    aliquid autem iste tempore id saepe dolorem quam quidem suscipit amet! Placeat exercitationem
-                    corrupti explicabo beatae quis quibusdam esse distinctio dolore.</p>
-                <p class="descripcion">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi sapiente quia
-                    consequuntur repellendus delectus amet aut reiciendis ratione saepe asperiores nemo nam quod ab,
-                    recusandae, obcaecati ipsa rerum facilis illum!</p>
+                <p class="descripcion">Esta iniciativa de voluntariado local nace de la idea de crear una aplicación de voluntariado social a nivel local dado que no existe ninguna iniciativa similar.
+                    Queremos diferenciarnos de las grandes organizaciones, destinadas a un único ámbito y sujetas a normas fijas, así pues, nuestros voluntarios tienen total libertad.</p>
+                    
+                <p class="descripcion"> Cada voluntario tendrá un amplio abanico de opciones para elegir, un horario y fecha para realizar la tarea, pudiendo ser capaz de realizar la tarea en cualquier rango horario dependiendo de su disponibilidad, 
+                    lo que facilita que se unan personas con horarios de trabajo y/o estudio distintos y puedan compaginarlo a su gusto.</p>
+
+                <p class="descripcion">Hay diferentes categorías entre las que se podrá elegir qué tipo de voluntariado se adecúa más a cada persona, no es necesario elegir la misma categoría en todas las tareas a realizar, 
+                    de tal manera que nuestros voluntarios se dirigirán a diferentes ámbitos, conociendo y aprendiendo juntos de cada persona que forma parte de nuestra comunidad.</p>
             </div>
         </div>
 
         <div id="divFuncionalidades">
 
             <h2 id="tituloFuncionalidades">Funcionalidades</h2>
-            <p class="descripcionFuncionalidades">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quisquam
-                ad unde natus, maiores earum velit aliquid laborum odio ipsum alias necessitatibus cum rerum aspernatur.
-                Delectus enim fuga cum vitae?</p>
-
+            <p class="descripcionFuncionalidades">Con un único registro podrás tanto subir una tarea como ver la información de las tareas subidas por los demás usuarios e 
+                inscribirte. Así pues, como usuario puedes subir un anuncio para que otros voluntarios te ayuden a tí poniendo una breve descripción, la localidad en la que realizar
+                la tarea y el horario para que los voluntarios inscritos tengan acceso a la información.</p>
         </div>
 
         <div id="divCaracteristicas">
 
             <h2 id="tituloCaracteristicas">Características</h2>
-            <p class="descripcionCaracteristicas">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos quisquam
-                ad unde natus, maiores earum velit aliquid laborum odio ipsum alias necessitatibus cum rerum aspernatur.
-                Delectus enim fuga cum vitae?</p>
-
+            <p class="descripcionCaracteristicas">En nuestra página web podrás encontrar información sobre nuestro equipo, un videotutorial de cómo hemos creado la página y un 
+                formulario de inscripción. Además puedes visitarnos en redes sociales como Instagram, Facebook o Twitter para estar siempre en contacto.</p>
         </div>
 
     </main>
@@ -135,13 +135,13 @@
                 <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Help center</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Instagram</a>
+                        <a href="https://www.instagram.com/" class="hover:underline" target="_blank">Instagram</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Twitter</a>
+                        <a href="https://twitter.com/?lang=es" class="hover:underline" target="_blank">Twitter</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline" target="_blank">Facebook
+                        <a href="https://es-es.facebook.com/" class="hover:underline" target="_blank">Facebook
                         </a>
                     </li><a href="#" class="hover:underline">
                     </a>
