--- a/equipo.html
+++ b/equipo.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/otros/favicon/favicon.png">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                 <a href="index.html" class="flex items-center">
                     <img src="assets/images/logo_white_large.png" class="mr-3 h-6 sm:h-9"
                         alt="Logo Meet Your Volunteer">
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Meet Your
+                    <span class="self-center text-3xl font-semibold whitespace-nowrap dark:text-white">Meet Your
                         Volunteer</span>
                 </a>
                 <button data-collapse-toggle="mobile-menu" type="button"
@@ -47,7 +48,7 @@
                     <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
                         <li>
                             <a href="index.html"
-                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Inicio</a>
                         </li>
                         <li>
                             <a href="equipo.html"
@@ -78,63 +79,51 @@
         <h1 id="tituloEquipo">Equipo</h1>
 
         
-        <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-4 gap-5">
+        <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-4 gap-5" id="grad">
 
             <!--Informacion Alex Pastor-->
-            <div class="rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="assets/images/usuario.jpg" alt="Alex Pastor">
+            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+                <img class="w-full" src="assets/images/pastor.jpg" alt="Alex Pastor" id="imagenPastor">
                 <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2">Alex Pastor - Product Owner</div>
-                    <p class="text-gray-700 text-base">
-                        Representa el cliente dentro del equipo de trabajo. Su principal responsabilidad es expresar claramente 
+                    <div class="font-bold text-2xl mb-2">Alex Pastor - Product Owner</div>
+                    <p class="text-white-700 text-xl">
+                        Su principal responsabilidad es expresar claramente 
                         la necesidad del cliente dentro del Product BackLog, administrarlo y priorizarlo.
                     </p>
-                </div>
-                <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><a href="#">Git</a></span>
                 </div>
             </div>
 
             <!--Informacion Marc Linares-->
-            <div class="rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="assets/images/usuario.jpg" alt="Marc Linares">
+            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+                <img class="w-full" src="assets/images/marc.jpg" alt="Marc Linares" id="imagenMarc">
                 <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2">Marc Linares - Scrum Master</div>
-                    <p class="text-gray-700 text-base">
+                    <div class="font-bold text-2xl mb-2">Marc Linares - Scrum Master</div>
+                    <p class="text-white-700 text-xl">
                         Es el responsable de asegurar que la metodología se está aplicando y de
                         que el equipo está trabajando ajustándose a las reglas que marca la misma.
                     </p>
                 </div>
-                <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><a href="#">Git</a></span>
-                </div>
             </div>
 
             <!--Informacion Monika -->
-            <div class="rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="assets/images/usuario.jpg" alt="Monika Deleva">
+            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+                <img class="w-full" src="assets/images/monika.jpg" alt="Monika Deleva" id="imagenMonika">
                 <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2">Monika Deleva - Developer</div>
-                    <p class="text-gray-700 text-base">
+                    <div class="font-bold text-2xl mb-2">Monika Deleva - Developer</div>
+                    <p class="text-white-700 text-xl">
                        Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
                     </p>
-                </div>
-                <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><a href="#">Git</a></span>
                 </div>
             </div>
             
             <!--Informacion bernat-->
-            <div class="rounded overflow-hidden shadow-lg">
-                <img class="w-full" src="assets/images/usuario.jpg" alt="Bernat Alcudia">
+            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+                <img class="w-full" src="assets/images/bernat.jpg" alt="Bernat Alcudia" id="imagenBernat">
                 <div class="px-6 py-4">
-                    <div class="font-bold text-xl mb-2">Bernat Alcudia - Developer</div>
-                    <p class="text-gray-700 text-base">
+                    <div class="font-bold text-2xl mb-2">Bernat Alcudia - Developer</div>
+                    <p class="text-white-700 text-xl">
                         Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
                     </p>
-                </div>
-                <div class="px-6 pt-4 pb-2">
-                    <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><a href="#">Git</a></span>
                 </div>
             </div>
         </div>
@@ -148,10 +137,10 @@
     <footer class="bg-purple-900" id="footer">
         <div class="grid grid-cols-2 gap-8 py-8 px-6 md:grid-cols-4">
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Company</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Compañía</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="index.html" class=" hover:underline">About</a>
+                        <a href="index.html" class=" hover:underline">Inicio</a>
                     </li>
                     <li class="mb-4">
                         <a href="equipo.html" class="hover:underline">Equipo</a>
@@ -162,7 +151,7 @@
                 </ul>
             </div>
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Help center</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Atención</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
                         <a href="https://www.instagram.com/" class="hover:underline" target="_blank">Instagram</a>
@@ -176,7 +165,7 @@
                     </li><a href="#" class="hover:underline">
                     </a>
                     <li class="mb-4"><a href="#" class="hover:underline">
-                        </a><a href="formulario.html" class="hover:underline">Contact Us</a>
+                        </a><a href="formulario.html" class="hover:underline">Contacta con nosotros</a>
                     </li>
                 </ul>
             </div>
@@ -184,29 +173,24 @@
                 <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Legal</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">Privacy Policy</a>
+                        <a href="politicaPrivacidad.html" class="hover:underline">Política de privacidad</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">Licensing</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                        <a href="terminosCondiciones.html" class="hover:underline">Términos &amp; Condiciones</a>
                     </li>
                 </ul>
             </div>
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Download</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Descarga</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="hover:underline"
-                            target="_blank">Windows</a>
+                        <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="hover:underline" target="_blank">Windows</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="py-6 px-4 bg-purple-900 md:flex md:items-center md:justify-between">
-            <span class="text-sm text-gray-300 sm:text-center">© 2022 <a href="https://flowbite.com">Meet Your
-                    Volunteer</a>. All
+            <span class="text-sm text-gray-300 sm:text-center">© 2022 <a href="https://flowbite.com">Meet Your Volunteer</a>. All
                 Rights Reserved.
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center md:mt-0">
@@ -231,8 +215,7 @@
                         </path>
                     </svg>
                 </a>
-                <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="text-gray-400 hover:text-white"
-                    target="_blank">
+                <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="text-gray-400 hover:text-white" target="_blank">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
                             d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
