--- a/videotutorial.html
+++ b/videotutorial.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/otros/favicon/favicon.png">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                 <a href="index.html" class="flex items-center">
                     <img src="assets/images/logo_white_large.png" class="mr-3 h-6 sm:h-9"
                         alt="Logo Meet Your Volunteer">
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Meet Your
+                    <span class="self-center text-3xl font-semibold whitespace-nowrap dark:text-white">Meet Your
                         Volunteer</span>
                 </a>
                 <button data-collapse-toggle="mobile-menu" type="button"
@@ -47,7 +48,7 @@
                     <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
                         <li>
                             <a href="index.html"
-                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Home</a>
+                                class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Inicio</a>
                         </li>
                         <li>
                             <a href="equipo.html"
@@ -88,10 +89,10 @@
     <footer class="bg-purple-900" id="footer">
         <div class="grid grid-cols-2 gap-8 py-8 px-6 md:grid-cols-4">
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Company</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Compañía</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="index.html" class=" hover:underline">About</a>
+                        <a href="index.html" class=" hover:underline">Inicio</a>
                     </li>
                     <li class="mb-4">
                         <a href="equipo.html" class="hover:underline">Equipo</a>
@@ -102,7 +103,7 @@
                 </ul>
             </div>
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Help center</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Atención</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
                         <a href="https://www.instagram.com/" class="hover:underline" target="_blank">Instagram</a>
@@ -116,7 +117,7 @@
                     </li><a href="#" class="hover:underline">
                     </a>
                     <li class="mb-4"><a href="#" class="hover:underline">
-                        </a><a href="formulario.html" class="hover:underline">Contact Us</a>
+                        </a><a href="formulario.html" class="hover:underline">Contacta con nosotros</a>
                     </li>
                 </ul>
             </div>
@@ -124,18 +125,15 @@
                 <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Legal</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">Privacy Policy</a>
+                        <a href="politicaPrivacidad.html" class="hover:underline">Política de privacidad</a>
                     </li>
                     <li class="mb-4">
-                        <a href="#" class="hover:underline">Licensing</a>
-                    </li>
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                        <a href="terminosCondiciones.html" class="hover:underline">Términos &amp; Condiciones</a>
                     </li>
                 </ul>
             </div>
             <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Download</h2>
+                <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Descarga</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
                         <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="hover:underline" target="_blank">Windows</a>
