Validamos los html y css, y formateamos el codigo.

--- a/politicaprivacidad.html
+++ b/politicaprivacidad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    
+
     <header>
 
         <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-purple-800">
@@ -202,8 +202,10 @@
                     <li class="mb-4">
                         <a href="https://es-es.facebook.com/" class="hover:underline" target="_blank">Facebook
                         </a>
-                    </li><a href="#" class="hover:underline">
-                    </a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline"></a>
+                    </li>
                     <li class="mb-4"><a href="#" class="hover:underline">
                         </a><a href="formulario.html" class="hover:underline">Contacta con nosotros</a>
                     </li>
