--- a/equipo.html
+++ b/equipo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Merriweather+Sans:wght@300&family=Raleway:ital,wght@1,900&family=Zilla+Slab:wght@300&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="assets/otros/favicon/favicon.png">
 </head>
 
@@ -78,23 +80,25 @@
 
         <h1 id="tituloEquipo">Equipo</h1>
 
-        
+
         <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-4 gap-5" id="grad">
 
             <!--Informacion Alex Pastor-->
-            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+            <div class="rounded overflow-hidden shadow-lg"
+                style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
                 <img class="w-full" src="assets/images/pastor.jpg" alt="Alex Pastor" id="imagenPastor">
                 <div class="px-6 py-4">
                     <div class="font-bold text-2xl mb-2">Alex Pastor - Product Owner</div>
                     <p class="text-white-700 text-xl">
-                        Su principal responsabilidad es expresar claramente 
+                        Su principal responsabilidad es expresar claramente
                         la necesidad del cliente dentro del Product BackLog, administrarlo y priorizarlo.
                     </p>
                 </div>
             </div>
 
             <!--Informacion Marc Linares-->
-            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+            <div class="rounded overflow-hidden shadow-lg"
+                style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
                 <img class="w-full" src="assets/images/marc.jpg" alt="Marc Linares" id="imagenMarc">
                 <div class="px-6 py-4">
                     <div class="font-bold text-2xl mb-2">Marc Linares - Scrum Master</div>
@@ -106,23 +110,27 @@
             </div>
 
             <!--Informacion Monika -->
-            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+            <div class="rounded overflow-hidden shadow-lg"
+                style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
                 <img class="w-full" src="assets/images/monika.jpg" alt="Monika Deleva" id="imagenMonika">
                 <div class="px-6 py-4">
                     <div class="font-bold text-2xl mb-2">Monika Deleva - Developer</div>
                     <p class="text-white-700 text-xl">
-                       Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
+                        Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del
+                        software.
                     </p>
                 </div>
             </div>
-            
+
             <!--Informacion bernat-->
-            <div class="rounded overflow-hidden shadow-lg" style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
+            <div class="rounded overflow-hidden shadow-lg"
+                style="background: hsla(288, 89%, 29%, 0.55); backdrop-filter: blur(30px)">
                 <img class="w-full" src="assets/images/bernat.jpg" alt="Bernat Alcudia" id="imagenBernat">
                 <div class="px-6 py-4">
                     <div class="font-bold text-2xl mb-2">Bernat Alcudia - Developer</div>
                     <p class="text-white-700 text-xl">
-                        Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del software.
+                        Responsable de dar cumplimiento a los requerimientos de sprint. Se encarga del desarrollo del
+                        software.
                     </p>
                 </div>
             </div>
@@ -160,12 +168,13 @@
                         <a href="https://twitter.com/?lang=es" class="hover:underline" target="_blank">Twitter</a>
                     </li>
                     <li class="mb-4">
-                        <a href="https://es-es.facebook.com/" class="hover:underline" target="_blank">Facebook
-                        </a>
-                    </li><a href="#" class="hover:underline">
-                    </a>
-                    <li class="mb-4"><a href="#" class="hover:underline">
-                        </a><a href="formulario.html" class="hover:underline">Contacta con nosotros</a>
+                        <a href="https://es-es.facebook.com/" class="hover:underline" target="_blank">Facebook</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline"></a>
+                    </li>
+                    <li class="mb-4"><a href="#" class="hover:underline"></a>
+                        <a href="formulario.html" class="hover:underline">Contacta con nosotros</a>
                     </li>
                 </ul>
             </div>
@@ -184,13 +193,15 @@
                 <h2 class="mb-6 text-sm font-semibold text-gray-400 uppercase">Descarga</h2>
                 <ul class="text-gray-300">
                     <li class="mb-4">
-                        <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="hover:underline" target="_blank">Windows</a>
+                        <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="hover:underline"
+                            target="_blank">Windows</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="py-6 px-4 bg-purple-900 md:flex md:items-center md:justify-between">
-            <span class="text-sm text-gray-300 sm:text-center">© 2022 <a href="https://flowbite.com">Meet Your Volunteer</a>. All
+            <span class="text-sm text-gray-300 sm:text-center">© 2022 <a href="https://flowbite.com">Meet Your
+                    Volunteer</a>. All
                 Rights Reserved.
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center md:mt-0">
@@ -215,7 +226,8 @@
                         </path>
                     </svg>
                 </a>
-                <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="text-gray-400 hover:text-white" target="_blank">
+                <a href="https://github.com/MonikaDeleva/ProyectoIntegrado" class="text-gray-400 hover:text-white"
+                    target="_blank">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
                             d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
