Configuramos la pagina web para tema claro o tema oscuro

--- a/formulario.html
+++ b/formulario.html
@@ -62,7 +62,7 @@
                         </li>
                         <li>
                             <a href="formulario.html"
-                                class="block py-2 pr-4 pl-3 text-white bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
+                                class="block py-2 pr-4 pl-3 dark:text-white light:text-dark bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
                                 aria-current="page">Formulario</a>
                         </li>
 
@@ -115,7 +115,7 @@
                 </div>
                 <div class="relative z-0 w-full mb-6 group">
                     <select name="extrainfo" id="extrainfo"
-                        class="bg-gray-50 border border-gray-300 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                        class="bg-gray-50 border border-gray-300 dark:text-white light:text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                         <option selected>¿Por qué quiere contactarnos?</option>
                         <option value="A">Informarse sobre el proyecto</option>
                         <option value="B">Precio/Detalles</option>
