--- a/videotutorial.html
+++ b/videotutorial.html
@@ -58,7 +58,7 @@
                         </li>
                         <li>
                             <a href="videotutorial.html"
-                                class="block py-2 pr-4 pl-3 text-white bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
+                                class="block py-2 pr-4 pl-3 dark:text-white light:text-dark bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
                                 aria-current="page">Videotutorial</a>
                         </li>
 
