--- a/equipo.html
+++ b/equipo.html
@@ -54,7 +54,7 @@
                         </li>
                         <li>
                             <a href="equipo.html"
-                                class="block py-2 pr-4 pl-3 text-white bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
+                                class="block py-2 pr-4 pl-3 dark:text-white light:text-dark bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
                                 aria-current="page">Equipo</a>
                         </li>
                         <li>
