--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
                         <li>
                             <a href="index.html"
-                                class="block py-2 pr-4 pl-3 text-white bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
+                                class="block py-2 pr-4 pl-3 dark:text-white light:text-dark bg-indogo-900 rounded md:bg-transparent md:text-white-700 md:p-0 dark:text-white"
                                 aria-current="page">Inicio</a>
                         </li>
                         <li>
